<resources>
    <string name="app_name">GazApp</string>
    <string name="welcome_to_grawan_gas_delivering_app">welcome to grawan gas delivering app</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="forget_password">forget password ?</string>
    <string name="login">login</string>
    <string name="register">register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_phone">mobile phone</string>
    <string name="home_phone">home phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="next">next</string>
    <string name="agree_on_terms_of_service">agree on terms of service</string>
    <string name="email">Email</string>
    <string name="send">send</string>
    <string name="enter_email">please enter your email to reset password</string>
    <string name="code_was_sentto_your_email_to_reset_your_password">code was sentto your email to reset your password</string>
    <string name="confirm">confirm</string>
    <string name="code_not_sent">code not sent ?</string>
    <string name="enter_code">please enter verification code sent to your email</string>
    <string name="resend">resend</string>
    <string name="new_password">new password</string>
    <string name="enter_new">please enter new password</string>
    <string name="confirm_newpassword">confirm newpassword</string>
    <string name="activate">activate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome">welcome</string>
    <string name="home">home</string>
    <string name="logout">logout</string>
    <string name="title_activity_profile">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">progile</string>
    <string name="welcome_p">welcome...</string>
    <string name="name">name</string>
    <string name="save_changes">save changes</string>
    <string name="mu_orders">my orders</string>
    <string name="cart">shopping cart</string>
    <string name="notifications">notifications</string>
    <string name="about">about</string>
    <string name="rules">rules</string>
    <string name="contact_us">contact us</string>
    <string name="share">share</string>
    <string name="product_details">product details</string>
    <string name="add_to_cart">add to cart</string>
    <string name="download_the_app">download_app</string>
    <string name="text_is_written_here">text is written here...</string>
    <string name="your_order_sent">your request has been sent</string>
    <string name="successfully">successfully and you will be informed when accepted by the provider</string>
    <string name="ok">ok</string>
    <string name="title_activity_location">Map</string>
    <string name="save_address">save address</string>
    <string name="add_new_address">add new address</string>
    <string name="wait">please wait</string>
    <string name="added_to_cart">added to cart</string>
    <string name="email_or_phone">email or phone</string>
    <string name="total">total</string>
    <string name="order_price">order price</string>
    <string name="delivery_cost">delivery cost</string>
    <string name="confirm_order">confirm order</string>
    <string name="delivery_address">delivery address</string>
    <string name="confirmin_order">confirmin order</string>
    <string name="add_nrw_address">add nrw address</string>
    <string name="address">address</string>
    <string name="payment">payment</string>
    <string name="card_number">card number</string>
    <string name="cancel">cancel</string>
    <string name="order_nunber">order nunber :</string>
    <string name="my_orders">my orders</string>
    <string name="current_orders">current orders</string>
    <string name="last_orders">last orders</string>
    <string name="order_has_been_accepted">order has been accepted</string>
    <string name="order_has_been_tracked">order has been tracked</string>
    <string name="order_has_been_delivered">order has been delivered</string>
    <string name="search_for">search for....</string>
    <string name="are_you_sure_you_want_to_log_out">are you sure you want to log out ?</string>
    <string name="last_search">last search</string>
    <string name="are_you_sure_yo_want_delete_this_order">are you sure yo want delete this order ?</string>
    <string name="change">change</string>
    <string name="change_password">change password</string>
    <string name="current_password">current password</string>
    <string name="no_data_in_the_shopping_cart">no data in the shopping cart</string>
    <string name="add">add</string>
    <string name="agree_terms">please agree terms of service</string>
    <string name="expiry_date">expiry date</string>
    <string name="cvv">cvv</string>
    <string name="please_enter_email">Please Enter Email or phone number</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="pass_error">the password shouldn,t be less than 6 numbers</string>
    <string name="username_required">username required</string>
    <string name="confirm_error">password confirmation don,t match</string>
    <string name="address_required">address required</string>
    <string name="email_required">email required</string>
    <string name="phone_required">phone required</string>
    <string name="home_required">home phone required</string>
    <string name="not_accepted_yet">accept date </string>
    <string name="not_tracked_yet">tracking date</string>
    <string name="not_delivered_yet">delivery date</string>
    <string name="code_expired">code expired please resend code</string>
    <string name="enter_valid_email">please enter a valid email</string>
    <string name="edit">edit</string>
    <string name="edit_profile">edit profile</string>
    <string name="reyal">reyal</string>
    <string name="order_rejected">order rejected</string>
    <string name="accepted">order accepted</string>
    <string name="pending">waiting for acceptance</string>
    <string name="no_products">no enough products</string>
    <string name="rate">rate app</string>
</resources>
