<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orderitem_tv_number"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:text="@string/order_nunber"
        android:layout_margin="@dimen/_3sdp"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/order_item_lin_acepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/orderitem_tv_number">
        <ImageView
            android:id="@+id/order_item_iv_acepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:src="@drawable/accepted"/>


        <TextView
            android:textSize="@dimen/_14sdp"
            android:id="@+id/order_item_tv_acepted"
            android:layout_margin="@dimen/_3sdp"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_has_been_accepted"/>
    </LinearLayout>
    <View
        android:id="@+id/order_item_line_accepted"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_below="@id/order_item_lin_acepted"
        android:background="@color/light_grey"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orderitem_tv_accept_date"
        android:textColor="@color/grey"
        android:layout_below="@id/order_item_lin_acepted"
        android:text="@string/not_accepted_yet"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <LinearLayout
        android:id="@+id/order_item_lin_tracked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/orderitem_tv_accept_date">
        <ImageView
            android:id="@+id/order_item_iv_tracked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:src="@drawable/tracking"/>
        <TextView
            android:textSize="@dimen/_14sdp"
            android:id="@+id/order_item_tv_tracked"
            android:layout_margin="@dimen/_3sdp"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_has_been_tracked"/>
    </LinearLayout>
    <View
        android:id="@+id/order_item_line_tracked"

        android:layout_width="@dimen/_1sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_below="@id/order_item_lin_tracked"
        android:background="@color/light_grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:id="@+id/orderitem_tv_track_date"
        android:textColor="@color/grey"
        android:layout_below="@id/order_item_lin_tracked"
        android:text="@string/not_tracked_yet"
       />

    <LinearLayout
        android:id="@+id/order_item_lin_delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/orderitem_tv_track_date">
        <ImageView
            android:id="@+id/order_item_iv_delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:src="@drawable/delivered"/>
        <TextView
            android:textSize="@dimen/_14sdp"
            android:id="@+id/order_item_tv_delivered"
            android:layout_margin="@dimen/_3sdp"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_has_been_delivered"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orderitem_tv_deliver_date"
        android:textColor="@color/grey"
        android:layout_below="@id/order_item_lin_delivered"
        android:text="@string/not_delivered_yet"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkblue"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_below="@id/orderitem_tv_deliver_date"/>



</RelativeLayout>