<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.auth.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email_or_phone"
        android:textColorHint="@color/darkblue"
        app:boxStrokeColor="@color/darkblue"
        app:boxStrokeWidthFocused="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:boxStrokeWidth="0.5dp"
        app:errorTextColor="@color/dark_red"
        app:boxStrokeErrorColor="@color/darkblue"

        android:layout_marginTop="@dimen/_40sdp"
        android:id="@+id/fragment_login_txt_username">
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/araby"
            android:layout_width="match_parent"

            android:inputType="textPersonName"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"

            android:textColor="@color/black"
            android:id="@+id/fragment_login_ed_username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        app:boxStrokeWidthFocused="0.5dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:textColorHint="@color/darkblue"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_below="@id/fragment_login_txt_username"
        android:hint="@string/password"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/darkblue"


        android:id="@+id/fragment_login_txt_password">
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/araby"

            android:layout_width="match_parent"
            android:inputType="numberPassword"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:id="@+id/fragment_login_ed_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textSize="@dimen/_15sdp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/forget_password"
        android:fontFamily="@font/araby"
        android:layout_below="@id/fragment_login_txt_password"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/darkblue"
        android:id="@+id/fragment_login_tv_forget"
        android:layout_marginTop="@dimen/_10sdp"/>
    <Button
        android:fontFamily="@font/araby"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/fragment_login_tv_forget"
        android:layout_marginTop="@dimen/_20sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="@color/darkblue"
        android:id="@+id/fragment_login_btn_login"/>








</RelativeLayout>