<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.auth.NewPassword">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"


        android:layout_height="wrap_content"
        android:textColorHint="@color/darkblue"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:hint="@string/new_password"



        android:id="@+id/fragment_new_password_txt_new_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="numberPassword"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:id="@+id/fragment_new_password_ed_new_password"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:textColorHint="@color/darkblue"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:hint="@string/confirm_newpassword"
        android:layout_below="@id/fragment_new_password_txt_new_password"



        android:id="@+id/fragment_new_password_txt_confirm_new_password">
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:inputType="numberPassword"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:id="@+id/fragment_new_password_ed_confirm_new_password"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_below="@id/fragment_new_password_txt_confirm_new_password"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/darkblue"
        android:textColor="@color/white"
        android:id="@+id/fragment_new_password_btn_confirm"/>




</RelativeLayout>