<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.home.ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/back_1"
        android:id="@+id/activity_profile_rel_title"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:layout_marginRight="@dimen/_20sdp"
            android:id="@+id/activity_profile_btn_back"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"

            android:fontFamily="@font/araby"
            android:textSize="@dimen/_20sdp"
            android:text="@string/profile"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_profile_rel_title"
        android:layout_marginTop="-100dp"
        android:background="@color/white">
        <TextView
            android:fontFamily="@font/araby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_p"
            android:textColor="@color/darkblue"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:id="@+id/activity_profile_tv_welcome"/>
               <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeColor="@color/darkblue"

            android:layout_width="match_parent"

            android:layout_height="@dimen/_40sdp"
            android:textColorHint="@color/darkblue"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/name"
            android:layout_below="@id/activity_profile_tv_welcome"



            android:id="@+id/activity_profile_txt_username">
            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:fontFamily="@font/araby"
                android:layout_width="match_parent"
                android:inputType="textPersonName"

                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:id="@+id/activity_profile_ed_username"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeColor="@color/darkblue"

            android:layout_width="match_parent"

            android:layout_height="@dimen/_40sdp"
            android:textColorHint="@color/darkblue"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/mobile_phone"
            android:layout_below="@id/activity_profile_txt_username"



            android:id="@+id/activity_profile_txt_phone">
            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/araby"
                android:enabled="false"

                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:id="@+id/activity_profile_ed_phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeColor="@color/darkblue"

            android:layout_width="match_parent"

            android:layout_height="@dimen/_40sdp"
            android:textColorHint="@color/darkblue"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/home_phone"
            android:layout_below="@id/activity_profile_txt_phone"



            android:id="@+id/activity_profile_txt_phone_home">
            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:fontFamily="@font/araby"

                android:inputType="phone"
                android:enabled="false"

                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:id="@+id/activity_profile_ed_phone_home"
                />
        </com.google.android.material.textfield.TextInputLayout>

           <RelativeLayout
               android:layout_below="@id/activity_profile_txt_phone_home"
               android:layout_marginEnd="@dimen/_10sdp"
               android:layout_marginTop="@dimen/_10sdp"
               android:layout_marginStart="@dimen/_10sdp"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_40sdp">
               <com.google.android.material.textfield.TextInputLayout
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   app:boxStrokeWidth="0.5dp"
                   app:boxStrokeColor="@color/darkblue"

                   android:layout_width="match_parent"

                   android:layout_height="@dimen/_40sdp"
                   android:textColorHint="@color/darkblue"

                   android:hint="@string/password"




                   android:id="@+id/activity_profile_txt_password">

               <com.google.android.material.textfield.TextInputEditText

                   android:enabled="false"


                   android:layout_width="match_parent"

                   android:layout_alignParentStart="true"
                   android:inputType="numberPassword"
                   android:layout_height="match_parent"
                   android:padding="@dimen/_5sdp"
                   android:textColor="@color/black"
                   android:id="@+id/activity_profile_ed_password"
                   android:fontFamily="@font/araby"

                   />
               </com.google.android.material.textfield.TextInputLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/change"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentBottom="true"
                   android:textSize="@dimen/_15sdp"
                   android:textColor="@color/darkblue"
                   android:layout_marginRight="@dimen/_10sdp"
                   android:fontFamily="@font/araby"
                   android:id="@+id/activity_profile_btn_change_password"/>

           </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/activity_profile_btn_edit"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/edit"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/araby"/>





    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_60sdp"
        android:id="@+id/activity_profile_iv_profile"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:src="@drawable/photo"/>




</RelativeLayout>